log
Sat 18 May 2024 02:23:43 PM UTC: 
 tests:  0|5
total_score: 0/70
fad557e
Sat 18 May 2024 02:36:23 PM UTC: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
1b6b3b2
Sat 18 May 2024 02:43:23 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
5a41aa6
Sat 18 May 2024 04:10:14 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3db82e5
Sat 18 May 2024 04:10:51 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ffb9ae9
Sat 18 May 2024 04:11:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fcb35d7
Sat 18 May 2024 04:35:34 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
77d9758
Sat 18 May 2024 04:35:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
2806377
Sat 18 May 2024 04:37:19 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
fc79989
Sat 18 May 2024 04:37:44 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:106:1: error: control reaches end of non-void function [-Werror=return-type]
  106 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8f5faa7
Sat 18 May 2024 04:37:54 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
3d10c24
